--- a/navigation/card.html
+++ b/navigation/card.html
@@ -47,11 +47,11 @@
                                     DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m>
                                 </a>
                                 <div class="containt">
-                                    <a href="./navigation/card.html">THẺ HỘI VIÊN</a>
-                                    <a href="./navigation/train.html">HUẤN LUYỆN VIÊN</a>
-                                    <a href="./navigation/shop.html">CỬA HÀNG WHEY</a>
-                                    <a href="./navigation/chatbox.html">CHAT ONLINE</a>
-                                    <a href="./navigation/test.html">TEST</a>
+                                    <a href="./card.html">THẺ HỘI VIÊN</a>
+                                    <a href="./train.html">HUẤN LUYỆN VIÊN</a>
+                                    <a href="./shop.html">CỬA HÀNG WHEY</a>
+                                    <a href="./chatbox.html">CHAT ONLINE</a>
+                                    <a href="./test.html">TEST</a>
                                 </div>
                             </div>
                         </li>
@@ -73,7 +73,7 @@
                                 <a class="loginstatus status" href="#">
                                     ĐĂNG NHẬP
                                 </a>
-                                <a class="status" href="./navigation/information_account.html">
+                                <a class="status" href="./information_account.html">
                                     THÔNG TIN TK
                                 </a>
                                 <a class="status" href="#">
@@ -118,7 +118,7 @@
                                     TRANG CHỦ
                                 </span>
                             </a>
-                            <a class="content__inner" href="./navigation/forum.html">
+                            <a class="content__inner" href="./forum.html">
                                 <i class='bx bx-world'></i>
                                 <span class="noidung__text1">
                                     DIỄN ĐÀN
@@ -132,21 +132,21 @@
                                     </span>
                                 </b>
                                 <div class="noidung222">
-                                    <a class="content__inner" href="./navigation/card.html">
+                                    <a class="content__inner" href="./card.html">
                                         THẺ HỘI VIÊN
                                     </a>
-                                    <a class="content__inner" href="./navigation/train.html">
+                                    <a class="content__inner" href="./train.html">
                                         HUẤN LUYỆN VIÊN
                                     </a>
-                                    <a class="content__inner" href="./navigation/shop.html">
+                                    <a class="content__inner" href="./shop.html">
                                         CỬA HÀNG WHEY
                                     </a>
-                                    <a class="content__inner" href="./navigation/chatbox.html">
+                                    <a class="content__inner" href="./chatbox.html">
                                         CHAT ONLINE
                                     </a>
                                 </div>
                             </div>
-                            <a class="content__inner" href="./navigation/promotion.html">
+                            <a class="content__inner" href="./promotion.html">
                                 <i class='bx bxs-purchase-tag'></i>
                                 <span class="noidung__text1">
                                     KHUYẾN MÃI
@@ -528,26 +528,42 @@
                                 </label>
                             </div>
                         </div>
-
-                        <div class="user-box createBox">
-                            <input class="hope-date" required="" name="" type="text">
-                            <label>Ngày tập trong tuần mong muốn</label>
+                        <div class="radio-container">
+                            <span class="tyoe_package">Bài tập</span>
+                            <div class="radio-wrapper">
+                                <label class="radio-button">
+                                    <input id="option11" class="radio-option2" name="radio-group2" type="radio" checked>
+                                    <span class="radio-checkmark"></span>
+                                    <span class="radio-label">GYM</span>
+                                </label>
+                            </div>
+                            <div class="radio-wrapper">
+                                <label class="radio-button">
+                                    <input id="option12" class="radio-option2" name="radio-group2" type="radio">
+                                    <span class="radio-checkmark"></span>
+                                    <span class="radio-label">YOGA</span>
+                                </label>
+                            </div>
                         </div>
+                    </div>
+                    <div class="user-box createBox">
+                        <input class="hope-date" required="" name="" type="text">
+                        <label>Ngày tập trong tuần mong muốn</label>
                     </div>
 
                     <div class="radio-inputs">
                         <label class="radio">
                             <input class="time-input" type="radio" name="radio" checked="">
-                            <span class="name">1h30-3h00</span>
+                            <span class="name">13:30-15:00</span>
                         </label>
                         <label class="radio">
                             <input class="time-input" type="radio" name="radio">
-                            <span class="name">3h00-4h30</span>
+                            <span class="name">15:00-16:30</span>
                         </label>
 
                         <label class="radio">
                             <input class="time-input" type="radio" name="radio">
-                            <span class="name">5h30-6h30</span>
+                            <span class="name">17:30-18:30</span>
                         </label>
                     </div>
                     <select name="pt-select" id="pt-select" class="select-pt">
