--- a/navigation/card.html
+++ b/navigation/card.html
@@ -37,7 +37,7 @@
                 <!-- Thanh dieu huong -->
                 <div class="header__inner__navigation">
                     <ul>
-                        <li><a class="header__inner__navigation__sevice" href="./index.html"><span>TRANG CHỦ</span></a>
+                        <li><a class="header__inner__navigation__sevice" href="../index.html"><span>TRANG CHỦ</span></a>
                         </li>
                         <li><a class="header__inner__navigation__sevice" href="./navigation/forum.html">DIỄN ĐÀN</a>
                         </li>
@@ -112,7 +112,7 @@
                                 </div>
                                 <!-- <img src="../img/background/logo_and_bgr.png" alt="logo and bgr"> -->
                             </div>
-                            <a class="content__inner" href="./index.html">
+                            <a class="content__inner" href="../index.html">
                                 <i class='bx bxs-home'></i>
                                 <span class="noidung__text1">
                                     TRANG CHỦ
