--- a/navigation/admin.html
+++ b/navigation/admin.html
@@ -181,6 +181,30 @@
                     <!-- MESSAGE -->
                     <div class="container__show__message">
                         <div class="container__show__message__box">
+                            <div class="list-message-box">
+                                <h3 class="list-message-box__title">Đoạn chat</h3>
+                                <div class="list-message-box__find">
+                                    <i class="fa-solid fa-magnifying-glass"></i>
+                                    <input type="text" placeholder="Tìm kiếm trên chatbox">
+                                </div>
+                                <ul class="message__list">
+                                    <!-- <li class="message__user">
+                                        <div class="message__user__box">
+                                            <img src="../img/services/coach/img4.jpg" alt="" class="message__user__avt">
+                                            <div class="message__user__box__right">
+                                                <span class="message__user__name">
+                                                    Ngô Gia Quyến
+                                                </span>
+                                                <span class="message__user__msg">
+                                                    <span class="message__user__msg__obj">Bạn: </span>
+                                                    <div class="message__user__msg__text">xin chào bạn nhé!</div>
+                                                </span>
+                                            </div>
+                                            <i class="message__user__name__options fa-solid fa-ellipsis"></i>
+                                        </div>
+                                    </li> -->
+                                </ul>
+                            </div>
                             <div class="chatbox">
                                 <div class="chatbox__head">
                                     <h1 class="chatbox__head__title">Chatbox</h1>
@@ -282,7 +306,7 @@
                                     placeholder="Ngày gia nhập">
                                 <input id="input-date-end" class="show__input__date" type="text"
                                     placeholder="Ngày hết hạn">
-                                <button class="container__show__card__find__btn">Tìm kiếm</button>
+                                <button class="container__show__find__btn container__show__card__find__btn">Tìm kiếm</button>
                             </div>
                         </div>
                         <!-- <i class="remove-icon fa-solid fa-trash"></i> -->
