--- a/navigation/chatbox.html
+++ b/navigation/chatbox.html
@@ -44,20 +44,21 @@
                 <!-- Thanh dieu huong -->
                 <div class="header__inner__navigation">
                     <ul>
-                        <li><a class="header__inner__navigation__sevice" href="./index.html"><span>TRANG CHỦ</span></a>
+                        <li><a class="header__inner__navigation__sevice" href="./index.html">TRANG CHỦ</a>
                         </li>
                         <li><a class="header__inner__navigation__sevice" href="./navigation/forum.html">DIỄN ĐÀN</a>
                         </li>
                         <li>
                             <div class="dropdown">
                                 <a class="header__inner__navigation__sevice" href="#" onclick="yourFunction(event)">
-                                    DỊCH VỤ<m><i class='bx bxs-right-arrow'></i></m>
+                                    <span>DỊCH VỤ</span>
+                                    <m><i class='bx bxs-right-arrow'></i></m>
                                 </a>
                                 <div class="containt">
                                     <a href="./navigation/card.html">THẺ HỘI VIÊN</a>
                                     <a href="./navigation/train.html">HUẤN LUYỆN VIÊN</a>
                                     <a href="./navigation/shop.html">CỬA HÀNG WHEY</a>
-                                    <a href="./navigation/chatbox.html">CHAT ONLINE</a>
+                                    <a href="./navigation/chatbox.html"><span>CHAT ONLINE</span></a>
                                     <a href="./navigation/test.html">TEST</a>
                                 </div>
                             </div>
@@ -173,9 +174,9 @@
         <div class="container container--chat">
             <div class="chatbox">
                 <div class="chatbox__head">
-                    <h1 class="chatbox__head__title">Chatbox</h1>
+                    <h1 class="chatbox__head__title">CHAT BOX</h1>
                     <div class="chatbox__head__active">
-                        <span class="chatbox__head__active__text">Hoạt động</span>
+                        <span class="chatbox__head__active__text">Đang hoạt động</span>
                     </div>
                 </div>
                 <div class="chatbox__message">
@@ -191,14 +192,17 @@
                     <div class="chatbox__bottom__link-social">
                         <div class="chatbox__bottom__link-social__mess">
                             <a href="https://www.messenger.com/t/172967089240726/" class="chatbox__bottom__link-social__mess">
-                                <i class="fa-brands fa-facebook-messenger"></i>
-                                <span>chat messenger</span>
+                                <img class="messenger_ico" src="/img/icon/messenger_ico.png" alt="messenger">
+                                <ul class="sub">
+                                    <span>chat với chúng tôi</span>
+                                    <i class='bx bxs-down-arrow'></i>
+                                </ul>
                             </a>
                         </div>
                     </div>
                     <div class="chatbox__bottom__input">
                         <input type="search" autocomplete="off">
-                        <i class="fa-regular fa-paper-plane"></i>
+                        <i class='bx bxs-send' ></i>
                     </div>
                 </div>
 
