--- a/navigation/admin.html
+++ b/navigation/admin.html
@@ -202,6 +202,11 @@
                                             </div>
                                             <i class="message__user__name__options fa-solid fa-ellipsis"></i>
                                         </div>
+                                        <div class="message__user__box__affter">
+                                            <ul class="message__user__box__affter__list">
+                                                <li class="message__user__box__affter__item">Xóa đoạn chat</li>
+                                            </ul>
+                                        </div>
                                     </li> -->
                                 </ul>
                             </div>
