chatbox interface design

--- a/navigation/chatbox.html
+++ b/navigation/chatbox.html
@@ -201,7 +201,8 @@
                         </div>
                     </div>
                     <div class="chatbox__bottom__input">
-                        <input type="search" autocomplete="off">
+                        <!-- <input type="search" autocomplete="off"> -->
+                        <textarea id="myTextarea" rows="1" cols="20"></textarea>
                         <i class='bx bxs-send' ></i>
                     </div>
                 </div>
@@ -387,7 +388,7 @@
     <script src="../navigation_javascript/chatbox.js"></script>
     <script  type="module"  src="../navigation_javascript/login.js"></script>
     <script src="../navigation_javascript/menuv2.js"></script>
-    <!-- <script src="../navigation_javascript/chatbox.js"></script> -->
+    <script src="../navigation_javascript/input_chatbox.js"></script>
 </body>
 
 </html>
